--- a/10-MY451_10.rmd
+++ b/10-MY451_10.rmd
@@ -1,4 +1,4 @@
-# More statistics... {#c_more}
+# More statistics... {#c-more}
 
 You will no doubt be pleased to learn that the topics covered on this
 course have not quite exhausted the list of available statistical
