--- a/index.Rmd
+++ b/index.Rmd
@@ -163,7 +163,7 @@ assignments. For the homework assignments, students are encouraged to
 work together.
 
 #### MY451 on Moodle {-}
-<!-- {#sss_moodle} -->
+<!-- {#sss-moodle} -->
 
 The course materials are all available on Moodle. Go to
 `http://moodle.lse.ac.uk/` and login using your *username* and
